update index metadata

--- a/index.html
+++ b/index.html
@@ -3,18 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>allocator-role-switch</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+  <title>Material Allocator - Nasr Petroleum Company</title>
+  <meta name="description" content="Material Allocator for Nasr Petroleum Company" />
+  <meta name="author" content="abdelaal" />
+  <link rel="icon" type="image/png" href="/npc.png" />
 
-    <meta property="og:title" content="allocator-role-switch" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <!-- Open Graph / WhatsApp -->
+  <meta property="og:title" content="Material Allocator - Nasr Petroleum Company" />
+  <meta property="og:description" content="Material Allocator for Nasr Petroleum Company" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="/npc.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Material Allocator - Nasr Petroleum Company" />
+  <meta name="twitter:description" content="Material Allocator for Nasr Petroleum Company" />
+  <meta name="twitter:image" content="/npc.png" />
   </head>
 
   <body>
